--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: My Personal Website
-description: Jack's blog,use Jekyll and github pages.
-keywords: Jack,Jalpc,blog,Jekyll,github,gh-pages
+title: Home
+description: Welcome to my website! 
+keywords: tulha,computer vision,machine learning,Jekyll,github,gh-pages,graduate student
 #baseurl:  /Jalpc # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://github.com/tulha/tulha.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
